# DesignPattern

./: CMakeLists.txt  README.md  main.cpp
simple_factory/: Operation.h  OperationFactory.h  simple_factory_test.h
strategy/: ConcretePayMethod.h  Pay.h  PayMethod.h  strategy_test.h
